# app/controllers/concerns/error_handler_concern.rb
@@ -9,5 +9,17 @@ module ErrorHandlerConcern
     rescue_from Transactions::Errors::InvalidCurrencyPairError do |e|
       render json: { error: e.message }, status: :unprocessable_entity
     end
+
+    rescue_from Transactions::Errors::InvalidAmountError do |e|
+      render json: { error: e.message }, status: :unprocessable_entity
+    end
+
+    rescue_from ExternalTransactions::Errors::InvalidAmountError do |e|
+      render json: { error: e.message }, status: :unprocessable_entity
+    end
+
+    rescue_from ExternalTransactions::Errors::InvalidCurrencyPairError do |e|
+      render json: { error: e.message }, status: :unprocessable_entity
+    end
   end
 end
